Fixed overflowing header height for services page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -701,7 +701,7 @@ h5 {
   }
 
   #header {
-    min-height: 100vh;
+    height: auto;
     #nav {
       width: 100%;
 
@@ -968,7 +968,6 @@ h5 {
   // SERVICES PAGE
   .our-services {
     margin-bottom: 6rem;
-    margin-top: -55rem;
 
     .is-one-fifth {
       display: none !important;
@@ -976,6 +975,7 @@ h5 {
 
     .service-items {
       padding: 0 !important;
+      margin-top: 0 !important;
 
       .service-item {
         h4 {
